<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent"
    android:id="@+id/loginLayout"
    android:background="#D9D9D5"
    android:paddingLeft="50dp"
    android:paddingRight="50dp"
    android:paddingBottom="50dp">

    <ImageView
        android:layout_width="160dp"
        android:layout_height="160dp"
        android:id="@+id/imageView"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="74dp"
        android:src="@drawable/ic_launcher" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/login_button"
        android:layout_marginTop="25dp"
        android:onClick="ontoHomeButton"
        android:nestedScrollingEnabled="false"
        android:clickable="true"
        android:text="@string/login_button_login"
        android:layout_below="@+id/editText"
        android:layout_alignLeft="@+id/editText"
        android:layout_alignStart="@+id/editText" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/sign_up_button"
        android:nestedScrollingEnabled="false"
        android:onClick="ontoGenInfoButton"
        android:text="@string/login_button_signup"
        android:layout_alignTop="@+id/login_button"
        android:layout_alignRight="@+id/editText"
        android:layout_alignEnd="@+id/editText" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:id="@+id/editText"
        android:background="#FFFFFF"
        android:layout_below="@+id/editText2"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="39dp"
        android:inputType="textPassword"
        android:textColor="#322F32"
        android:paddingLeft="4dp"
        android:textColorHint="@color/hintcolor"
        android:hint="@string/login_hint_password" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"
        android:ems="10"
        android:id="@+id/editText2"
        android:background="#FFFFFF"
        android:layout_centerVertical="true"
        android:layout_alignLeft="@+id/editText"
        android:layout_alignStart="@+id/editText"
        android:paddingLeft="4dp"
        android:nestedScrollingEnabled="false"
        android:textColor="#322F32"
        android:hint="@string/login_hint_username"
        android:singleLine="true"
        android:textColorHint="@color/hintcolor" />
    <!-- gitcheck -->
</RelativeLayout>